using OrderManagerLibrary.Model.Interfaces;

namespace OrderManagerLibrary.Model.Classes;

/// <summary>
/// Represents a customer ordering from the bakery
/// </summary>
public class Customer : ICustomer
{
    public int Id { get; set; }
    public string FirstName { get; set; }
    public string LastName { get; set; }
    public string PhoneNumber { get; set; }
    public List<Order> Orders { get; set; }


    /// <summary>
    /// Constructor used when loading an existing customer from the database.
    /// The CustomerId is already known (retrieved from a SELECT query).
    /// </summary>
    public Customer(int personId, string firstName, string lastName, string phoneNumber)
    {
        Id = personId;
        FirstName = firstName;
        LastName = lastName;
        PhoneNumber = phoneNumber;
    }

    /// <summary>
    /// Constructor used when creating a new customer before it is saved to the database.
    /// CustomerId is not assigned yet (will be generated by the database).
    /// </summary>
    public Customer(string firstName, string lastName, string phoneNumber)
    {
        FirstName = firstName;
        LastName = lastName;
        PhoneNumber = phoneNumber;
    }

    public string GetFullName()
    {
        return FirstName + " " + LastName;
    }
}
